--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ header {
   padding: 12px 24px;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 34px;
 }
 
 #headerLogo img {
@@ -59,7 +60,6 @@ header .button {
   font-size: 1rem;
   font-weight: bold;
   margin-left: 20px;
-  margin-bottom: 60px;
 }
 
 header .button:hover {
@@ -169,7 +169,6 @@ select,
 button,
 input[type="checkbox"],
 input[type="radio"],
-input[type="range"],
 input[type="file"] {
   background: black;
   color: white;
@@ -252,11 +251,12 @@ select {
 
 input[type="range"] {
   appearance: none;
-  width: 20%;
+  width: 44%;
   height: 1px;
   background: #65ba21;
   border-radius: 4px;
   margin-bottom: 14px;
+  cursor: pointer;
 }
 
 .site-footer {
