--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
     width: 60%;
   }
   #indexUpperPicture img {
-   width: 100%;
-  max-width: 350px;
-  height: auto;
-  margin-bottom: 14px;
-}
+    width: 100%;
+    max-width: 350px;
+    height: auto;
+    margin-bottom: 14px;
+  }
 }
 
 @media (min-width: 900px) {
@@ -33,6 +33,7 @@ body {
   background-color: black;
   color: white;
   text-align: center;
+  overflow-x: hidden;
 }
 
 header {
@@ -42,6 +43,10 @@ header {
   justify-content: space-between;
   flex-wrap: wrap;
   margin-bottom: 34px;
+  z-index: 10;
+  top: 0;
+  position: sticky;
+  background-color: rgba(0, 0, 0, 0.74);
 }
 
 #headerLogo img {
@@ -76,7 +81,7 @@ main h1 {
 }
 
 #indexUpperPicture img {
-   width: 100%;
+  width: 100%;
   max-width: 650px;
   height: auto;
   margin-bottom: 14px;
@@ -115,7 +120,7 @@ main h1 {
 .quote-block p {
   color: #ffffff;
   font-size: 1.2rem;
-  font-family: Georgia, 'Times New Roman', Times, serif
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .quote-block {
@@ -151,6 +156,15 @@ main h1 {
   margin-top: 0px;
 }
 
+
+input:focus,
+select:focus,
+    textarea:focus {
+      outline-offset: 2px;
+}
+
+
+
 input,
 textarea {
   background: black;
@@ -163,7 +177,6 @@ textarea {
   cursor: text;
   resize: both;
   max-width: 40%;
-
 }
 select,
 button,
@@ -214,7 +227,7 @@ select {
   gap: 8px;
   cursor: pointer;
   color: #abec76;
-  
+
   width: fit-content;
 }
 
